Detect missing --add-opens at a single catch point in AbstractDiagnosingMatcher Use a template-method pattern: matches() is now a final method in AbstractDiagnosingMatcher that calls abstract doMatches() and catches any RuntimeException whose cause chain contains an InaccessibleObjectException (identified by class name to keep the code Java 8 compilable). When caught, it throws an IllegalStateException with a clear message that: - Identifies the missing --add-opens flag (extracted from the exception message) - Shows the exact Maven surefire <argLine> snippet to add - Shows the Gradle jvmArgs equivalent - Mentions IDE VM options All five subclasses (DiagnosingCustomisableMatcher, JsonMatcher, ContentMatcher, NullMatcher, IsEqualMatcher) rename their override from matches() to doMatches(). This keeps all reflection-access error handling in one place rather than scattered across three call sites.